@@ -547,6 +547,10 @@ class PreparedStatement extends EventEmitter {
       type = type()
     }
 
+    if (name in this.parameters) {
+      throw new PreparedStatementError(`The parameter name ${name} has already been declared. Parameter names must be unique`, 'EDUPEPARAM')
+    }
+
     this.parameters[name] = {
       name,
       type: type.type,
@@ -558,6 +562,21 @@ class PreparedStatement extends EventEmitter {
     }
 
     return this
+  }
+
+  /**
+   * Replace an input parameter on the request.
+   *
+   * @param {String} name Name of the input parameter without @ char.
+   * @param {*} [type] SQL data type of input parameter. If you omit type, module automaticaly decide which SQL data type should be used based on JS data type.
+   * @param {*} value Input parameter value. `undefined` and `NaN` values are automatically converted to `null` values.
+   * @return {Request}
+   */
+
+  replaceInput (name, type, value) {
+    delete this.parameters[name]
+
+    return this.input(name, type, value)
   }
 
   /**
@@ -579,6 +598,10 @@ class PreparedStatement extends EventEmitter {
 
     if (type instanceof Function) type = type()
 
+    if (name in this.parameters) {
+      throw new PreparedStatementError(`The parameter name ${name} has already been declared. Parameter names must be unique`, 'EDUPEPARAM')
+    }
+
     this.parameters[name] = {
       name,
       type: type.type,
@@ -589,6 +612,20 @@ class PreparedStatement extends EventEmitter {
     }
 
     return this
+  }
+
+  /**
+   * Replace an output parameter on the request.
+   *
+   * @param {String} name Name of the output parameter without @ char.
+   * @param {*} type SQL data type of output parameter.
+   * @return {PreparedStatement}
+   */
+
+  replaceOutput (name, type) {
+    delete this.parameters[name]
+
+    return this.output(name, type)
   }
 
   /**
@@ -1124,6 +1161,10 @@ class Request extends EventEmitter {
     if (typeof value === 'number' && isNaN(value)) value = null // NaN to null
     if (type instanceof Function) type = type()
 
+    if (name in this.parameters) {
+      throw new RequestError(`The parameter name ${name} has already been declared. Parameter names must be unique`, 'EDUPEPARAM')
+    }
+
     this.parameters[name] = {
       name,
       type: type.type,
@@ -1136,6 +1177,21 @@ class Request extends EventEmitter {
     }
 
     return this
+  }
+
+  /**
+   * Replace an input parameter on the request.
+   *
+   * @param {String} name Name of the input parameter without @ char.
+   * @param {*} [type] SQL data type of input parameter. If you omit type, module automaticaly decide which SQL data type should be used based on JS data type.
+   * @param {*} value Input parameter value. `undefined` and `NaN` values are automatically converted to `null` values.
+   * @return {Request}
+   */
+
+  replaceInput (name, type, value) {
+    delete this.parameters[name]
+
+    return this.input(name, type, value)
   }
 
   /**
@@ -1165,6 +1221,10 @@ class Request extends EventEmitter {
     if (typeof value === 'number' && isNaN(value)) value = null // NaN to null
     if (type instanceof Function) type = type()
 
+    if (name in this.parameters) {
+      throw new RequestError(`The parameter name ${name} has already been declared. Parameter names must be unique`, 'EDUPEPARAM')
+    }
+
     this.parameters[name] = {
       name,
       type: type.type,
@@ -1176,6 +1236,21 @@ class Request extends EventEmitter {
     }
 
     return this
+  }
+
+  /**
+   * Replace an output parameter on the request.
+   *
+   * @param {String} name Name of the output parameter without @ char.
+   * @param {*} type SQL data type of output parameter.
+   * @param {*} [value] Output parameter value initial value. `undefined` and `NaN` values are automatically converted to `null` values. Optional.
+   * @return {Request}
+   */
+
+  replaceOutput (name, type, value) {
+    delete this.parameters[name]
+
+    return this.output(name, type, value)
   }
 
   /**
