@@ -62,6 +62,8 @@ describe('tedious', () => {
     it('query with input parameters (batch)', done => TESTS['query with input parameters']('batch', done))
     it('query with output parameters', done => TESTS['query with output parameters']('query', done))
     it('query with output parameters (batch)', done => TESTS['query with output parameters']('batch', done))
+    it('query with duplicate parameters throws', done => TESTS['query with duplicate parameters throws'](done))
+    it('query parameters can be replaced', done => TESTS['query parameters can be replaced'](done))
     it('query with error', done => TESTS['query with error'](done))
     it('query with multiple errors', done => TESTS['query with multiple errors'](done))
     it('query with raiseerror', done => TESTS['query with raiseerror'](done))
@@ -69,6 +71,8 @@ describe('tedious', () => {
     it('batch', done => TESTS['batch'](done))
     it('create procedure batch', done => TESTS['create procedure batch'](done))
     it('prepared statement', done => TESTS['prepared statement'](done))
+    it('prepared statement with duplicate parameters throws', done => TESTS['prepared statement with duplicate parameters throws'](done))
+    it('prepared statement parameters can be replaced', done => TESTS['prepared statement parameters can be replaced'](done))
     it('prepared statement with affected rows', done => TESTS['prepared statement with affected rows'](done))
     it('prepared statement in transaction', done => TESTS['prepared statement in transaction'](done))
     it('transaction with rollback', done => TESTS['transaction with rollback'](done))
